--- a/client/src/components/EditableText/EditableText.css
+++ b/client/src/components/EditableText/EditableText.css
@@ -140,8 +140,7 @@
 
 .editText{
 height: min 440px;
-padding: 30px;
-margin-left: 20px;
+/* margin-left: 20px; */
 }
 
 
@@ -153,44 +152,10 @@ margin-left: 20px;
 
 
 #H4_1 {
-block-size: 53px;
-border-block-end-color: rgba(0, 0, 0, 0.125);
-border-block-end-style: solid;
-border-block-end-width: 1px;
-border-block-start-color: rgb(33, 37, 41);
-border-inline-end-color: rgb(33, 37, 41);
-border-inline-start-color: rgb(33, 37, 41);
-box-sizing: border-box;
-caret-color: rgb(33, 37, 41);
-color: rgb(33, 37, 41);
-column-rule-color: rgb(33, 37, 41);
-height: 53px;
-inline-size: 456.5px;
-margin-block-end: 0px;
-margin-block-start: 0px;
-min-block-size: auto;
-min-height: auto;
-min-inline-size: auto;
-min-width: auto;
-overflow-wrap: break-word;
-padding-block-end: 12px;
-padding-block-start: 12px;
-padding-inline-end: 20px;
-padding-inline-start: 20px;
-perspective-origin: 228.25px 26.5px;
-text-align: left;
-text-decoration: none solid rgb(33, 37, 41);
-text-size-adjust: 100%;
-transform-origin: 228.25px 26.5px;
-width: 456.5px;
-background: rgba(0, 0, 0, 0.03) none repeat scroll 0% 0% / auto padding-box border-box;
-border-top: 0px none rgb(33, 37, 41);
-border-right: 0px none rgb(33, 37, 41);
-border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-border-left: 0px none rgb(33, 37, 41);
-border-radius: 3px 3px 0px 0px;
-font: 500 24px / 28.8px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-margin: 0px;
-outline: rgb(33, 37, 41) none 0px;
-padding: 12px 20px;
+background-color: none;
+}
+
+.formDiv{
+    padding: 0px;
+    margin: 0px;
 }
