--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,20 +3,22 @@
 }
 
 .columns{
-  border: 2px solid black;
+  border: 1px solid rgb(95, 95, 95);
+  background-color: white;
+  margin-left: 0px;
+  padding-left: 0px;
 }
 
 .editText{
-  background-color: rgb(206, 204, 204);
-  margin-left: 20px;
-  padding: 0px;
-
+  
+  background-color: rgb(206, 204, 204); 
 }
-.textArea{
+
+/* .textArea{
   border: 1px solid rgb(88, 88, 88);
   font: 500 12.8px / 16px "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sansSerif;
   margin-left:60px;
-}
+} */
 
 .navBar{
   background-color: rgb(129, 131, 252);
@@ -29,3 +31,11 @@
   font: 600 12px / 16px "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sansSerif;
 }
 
+.col{
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.col-1{
+  padding-left: 0px;
+  padding-right: 0px;
+}
