--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer{
     margin-top: 1rem;
-    padding: 1rem;
+    /* padding: 1rem; */
     background-color: rgb(235, 195, 64);
-    position: fixed;
+    position: sticky;
     bottom: 0;
     left: 0;
     width: 100%;
