--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
   margin-left: 0px;
   padding-left: 0px;
   letter-spacing: -.5px;
+  margin-bottom: 5%;
 }
 
 .editText{
@@ -16,6 +17,7 @@
   border-bottom: 1px solid rgb(95, 95, 95);
   background-color: rgb(206, 204, 204);
   letter-spacing: -.5px; 
+  margin-bottom: 5%;
 }
 
 /* .textArea{
@@ -45,5 +47,5 @@
 }
 
 main{
-  height: calc(100vh - 166px);
+  height: calc(100vh - 100px);
 }
