--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,6 @@
   margin-left: 0px;
   padding-left: 0px;
   letter-spacing: -.5px;
-  margin-bottom: 5%;
 }
 
 .editText{
@@ -17,7 +16,6 @@
   border-bottom: 1px solid rgb(95, 95, 95);
   background-color: rgb(206, 204, 204);
   letter-spacing: -.5px; 
-  margin-bottom: 5%;
 }
 
 /* .textArea{
@@ -46,6 +44,6 @@
   padding-right: 0px;
 }
 
-main{
+/* main{
   height: calc(100vh - 100px);
-}
+} */
