--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,14 +25,13 @@
 } */
 
 .navBar{
-  background-color: #17a2b8;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16pt;
   width: 100%;
+  color: #f6f5f5;
 }
 
 .footer{
-  background-color: #17a2b8;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 12pt;
 }
@@ -52,6 +51,20 @@
 
 html {
   overflow-x: hidden; 
-  height: 100%
   /* overflow-y: hidden;  */
+}
+.gradientStyle {
+  background-image: linear-gradient(to right,#145374, #00334e);
+}
+
+p {
+  color: #f6f5f5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12pt
+}
+
+.buttonLabel {
+  color: #f6f5f5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16pt
 }
