--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -1,3 +1,13 @@
 #logo{
     max-width:max-content;
 }
+
+.navStyle {
+    background-image: linear-gradient(to right, #00334e, #145374);
+}
+
+.className {
+    color: #f6f5f5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12pt
+}
