--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,17 @@
 .footer{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 12pt;
+  position: sticky;
+  bottom: 0; 
+  width: 100%; 
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .footer {
+    position: sticky;
+    width: 100%;
+  }
 }
 
 .col{
@@ -67,5 +78,9 @@ p {
   color: #f6f5f5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16pt
+}
+
+.contentWrapper {
+  height: 100%; 
 }
 
