--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,7 @@
 .footer{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 12pt;
-  position: sticky;
+  position: absolute;
   bottom: 0; 
   width: 100%; 
 }
